force-app/main/default/objects/ssot__Incident__dlm/fields/ssot__AssignedGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignedGroupId__c</fullName>
    <label>Assigned Group</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignedGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>