force-app/main/default/objects/ssot__Incident__dlm/fields/ssot__IncidentLocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IncidentLocationId__c</fullName>
    <label>Incident Location</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IncidentLocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>