force-app/main/default/objects/ssot__Incident__dlm/fields/ssot__IsAutomaticallyCreated__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAutomaticallyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Automatically Created</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAutomaticallyCreated</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>