force-app/main/default/objects/ssot__Incident__dlm/fields/ssot__MajorIncidentStatusCommentsText__c.field-meta.xml
<CustomField>
    <fullName>ssot__MajorIncidentStatusCommentsText__c</fullName>
    <label>Major Incident Status Comments</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MajorIncidentStatusCommentsText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>