force-app/main/default/objects/ssot__Incident__dlm/fields/ssot__ReportedById__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReportedById__c</fullName>
    <label>Reported By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReportedById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>