force-app/main/default/objects/ssot__Incident__dlm/fields/ssot__ReportedMethodIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReportedMethodIdentifier__c</fullName>
    <label>Reported Method Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReportedMethodIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>